--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/index.js"
+    "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ --o src/public/css/"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,12 @@
   "description": "",
   "dependencies": {
     "express": "^5.2.1",
-    "express-handlebars": "^8.0.1"
+    "express-handlebars": "^8.0.1",
+    "node": "^20.19.6"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
+    "node-sass": "^9.0.0",
     "nodemon": "^3.1.11"
   }
 }
